--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 	<div class="header">
 		<div class="container">
-			<div class="logo"><img src="images/logo.png" /></div>
+			<div class="logo"><img src="images/logo.png" alt="" /></div>
 			<div class="phone">+7 (495) 223 53 00</div>
 			<div class="callback"><a href="#">Заказать обратный звонок</a></div>
 			<div class="language">
@@ -51,7 +51,7 @@
 			<div class="flexslider">
   <ul class="slides">
     <li>
-      <img src="images/slider-1.jpg" />
+      <img src="images/slider-1.jpg" alt="" />
 	  <div class="caption-slider">
 		<h3>«ДМ - ПРОДЖЕКТ» - директ маркетинговое агентство</h3>
 		<p>Команда профессионалов, имеющая многолетний опыт в сфере организации директ мейл, программ лояльности, дистрибуции печатных изданий, обработке баз данных, работающих ради Вашего блага.</p>
@@ -59,13 +59,13 @@
 	  </div>
     </li>
     <li>
-      <img src="images/slider-1.jpg" />
+      <img src="images/slider-1.jpg" alt="" />
     </li>
     <li>
-      <img src="images/slider-1.jpg" />
+      <img src="images/slider-1.jpg" alt="" />
     </li>
     <li>
-      <img src="images/slider-1.jpg" />
+      <img src="images/slider-1.jpg" alt="" />
     </li>
   </ul>
 </div>
@@ -82,9 +82,12 @@
 					<div class="item">
 						<div class="image"><img src="images/img-post.jpg" alt="" /></div>
 						<div class="desc">
-							<h3>Название услуги</h3>
-							<p>Название услуги
-								Курьерская доставка переодических издание, корреспонденции и документов.</p>
+							<h3>Директ мейл</h3>
+							<p>Печать именных писем;
+Предоставление конвертов;
+Упаковка нестандартных вложений;
+Сопроводительная документация.
+</p>
 							<a href="#" class="more">Узнать подробнее</a>
 						</div>
 					</div>
@@ -93,9 +96,8 @@
 					<div class="item">
 						<div class="image"><img src="images/img-post.jpg" alt="" /></div>
 						<div class="desc">
-							<h3>Название услуги</h3>
-							<p>Название услуги
-								Курьерская доставка переодических издание, корреспонденции и документов.</p>
+							<h3>Директ маркетинговые программы</h3>
+							<p>Разработка ДМ программ и программ лояльности</p>
 							<a href="#" class="more">Узнать подробнее</a>
 						</div>
 					</div>
@@ -104,9 +106,12 @@
 					<div class="item">
 						<div class="image"><img src="images/img-post.jpg" alt="" /></div>
 						<div class="desc">
-							<h3>Название услуги</h3>
-							<p>Название услуги
-								Курьерская доставка переодических издание, корреспонденции и документов.</p>
+							<h3>Обработка баз данных</h3>
+							<p>Собственные базы данных юр.лиц по Москве и России;
+Рубрикатор по 1700 видам деятельности;
+Индексация адресных баз;
+Услуги call-центра по актуализации баз данных.
+</p>
 							<a href="#" class="more">Узнать подробнее</a>
 						</div>
 					</div>
@@ -115,9 +120,8 @@
 					<div class="item">
 						<div class="image"><img src="images/img-post.jpg" alt="" /></div>
 						<div class="desc">
-							<h3>Название услуги</h3>
-							<p>Название услуги
-								Курьерская доставка переодических издание, корреспонденции и документов.</p>
+							<h3>Распространение</h3>
+							<p>Доступ к различной целевой аудитории: размещение рекламных материалов в коттеджных поселках, бизнес-центрах, ресторанах, аэропортах.</p>
 							<a href="#" class="more">Узнать подробнее</a>
 						</div>
 					</div>
@@ -126,9 +130,23 @@
 					<div class="item">
 						<div class="image"><img src="images/img-post.jpg" alt="" /></div>
 						<div class="desc">
-							<h3>Название услуги</h3>
-							<p>Название услуги
-								Курьерская доставка переодических издание, корреспонденции и документов.</p>
+							<h3>Телемаркетинг</h3>
+							<p>Актуализация баз данных;
+Выяснение контактного лица;
+Анкетирование;
+Презентация услуг и товаров.
+</p>
+							<a href="#" class="more">Узнать подробнее</a>
+						</div>
+					</div>
+					<!-- item end -->
+					<!-- item 6 -->
+					<div class="item">
+						<div class="image"><img src="images/img-post.jpg" alt="" /></div>
+						<div class="desc">
+							<h3>Дизайн и полиграфия</h3>
+							<p>Изготовление буклетов, брошюр, каталогов, листовок.
+</p>
 							<a href="#" class="more">Узнать подробнее</a>
 						</div>
 					</div>
@@ -142,9 +160,12 @@
 					<div class="item">
 						<div class="image"><img src="images/img-post.jpg" alt="" /></div>
 						<div class="desc">
-							<h3>Название услуги</h3>
-							<p>Название услуги
-								Курьерская доставка переодических издание, корреспонденции и документов.</p>
+							<h3>Курьерская доставка</h3>
+							<p>Ежедневная доставка более 3000 отправлений по Москве и МО;
+Верификация адресов;
+Контроль доставки;
+Отчетная документация.
+</p>
 							<a href="#" class="more">Узнать подробнее</a>
 						</div>
 					</div>
@@ -153,9 +174,10 @@
 					<div class="item">
 						<div class="image"><img src="images/img-post.jpg" alt="" /></div>
 						<div class="desc">
-							<h3>Название услуги</h3>
-							<p>Название услуги
-								Курьерская доставка переодических издание, корреспонденции и документов.</p>
+							<h3>Почтовое обслуживание</h3>
+							<p>Персональная почтовая служба.
+Отправка простых и заказных писем, бандеролей, посылок не выходя из офиса.
+</p>
 							<a href="#" class="more">Узнать подробнее</a>
 						</div>
 					</div>
@@ -164,9 +186,10 @@
 					<div class="item">
 						<div class="image"><img src="images/img-post.jpg" alt="" /></div>
 						<div class="desc">
-							<h3>Название услуги</h3>
-							<p>Название услуги
-								Курьерская доставка переодических издание, корреспонденции и документов.</p>
+							<h3>Экспресс-доставка</h3>
+							<p>Проверенная система контроля качества доставки;
+Адаптация системы доставки под задачи клиента.
+</p>
 							<a href="#" class="more">Узнать подробнее</a>
 						</div>
 					</div>
@@ -175,24 +198,15 @@
 					<div class="item">
 						<div class="image"><img src="images/img-post.jpg" alt="" /></div>
 						<div class="desc">
-							<h3>Название услуги</h3>
-							<p>Название услуги
-								Курьерская доставка переодических издание, корреспонденции и документов.</p>
+							<h3>Экспедирование</h3>
+							<p>Доставка грузов по Москве и Московской области;
+Доставка товаров для Интернет-магазинов.
+</p>
 							<a href="#" class="more">Узнать подробнее</a>
 						</div>
 					</div>
 					<!-- item end -->
-					<!-- item 5 -->
-					<div class="item">
-						<div class="image"><img src="images/img-post.jpg" alt="" /></div>
-						<div class="desc">
-							<h3>Название услуги</h3>
-							<p>Название услуги
-								Курьерская доставка переодических издание, корреспонденции и документов.</p>
-							<a href="#" class="more">Узнать подробнее</a>
-						</div>
-					</div>
-					<!-- item end -->
+					
 				</div><!-- box end -->
 			</div><!-- grid-6 end -->
 		</div>
@@ -272,9 +286,9 @@
 			<div class="footer">
 				<div class="column1">
 					<p class="copy">© 1997—2014 «DM-Project»</p>
-					<p class="l-bottom"><img src="images/logo-bottom.png"/></p>
+					<p class="l-bottom"><img src="images/logo-bottom.png" alt="" /></p>
 					<ul class="social">
-						<li class="facebook"><a href="#"title="facebook" >Facebook</a></li>
+						<li class="facebook"><a href="#" title="facebook" >Facebook</a></li>
 						<li class="twiter"><a href="#" title="twiter">Twiter</a></li>
 						<li class="in"><a href="#" title="in">In</a></li>
 						<li class="vk"><a href="#" title="Vk">Vk</a></li>
