--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 			<div class="footer">
 				<div class="column1">
 					<p class="copy">© 1997—2014 «DM-Project»</p>
-					<p class="l-bottom"><img src="images/logo-bottom.png" alt="" /></p>
+					<p class="l-bottom"><img src="images/logo.png" alt="" /></p>
 					<ul class="social">
 						<li class="facebook"><a href="#" title="facebook" >Facebook</a></li>
 						<li class="twiter"><a href="#" title="twiter">Twiter</a></li>
@@ -377,8 +377,8 @@
 					</ul>
 				</div>
 				<div class="column4">
-					<p>Россия, г.Москва,</p>
-					<p>ул. Новороссийская 12, офис.24</p>
+					<p>111123, г.Москва,</p>
+					<p> шоссе Энтузиастов, д.31, стр.37</p>
 					<p><a href="#">Карта проезда</a></p>
 				</div>
 			</div>
