--- a/service.html
+++ b/service.html
@@ -60,15 +60,15 @@
 		<div class="container">
 			<h2>Ваши преимущества</h2>
 			<div class="d-item-block">
-				<a href="#">Название преимущества</a>
+				<span>Название преимущества</span>
 				<p>Курьерская доставка переодических издание и корреспонденции</p>
 			</div>
 			<div class="d-item-block">
-				<a href="#">Название преимущества</a>
+				<span>Название преимущества</span>
 				<p>Курьерская доставка переодических издание и корреспонденции</p>
 			</div>
 			<div class="d-item-block">
-				<a href="#">Название преимущества</a>
+				<span>Название преимущества</span>
 				<p>Курьерская доставка переодических издание и корреспонденции</p>
 			</div>
 		</div>
